# forensics

./: .gitignore  Makefile  README.md  ela.py  hash_image.py  metadata.py  pyproject.toml
app/: ela.py  hash_image.py  metadata.py  utils.py
app/cli/: checkers.py  ela.py  hash_image.py  inspectors.py  main.py  report.py  setup.py  utils.py
app/cli/ela_nn/: ela.py
app/ela_nn/: ela.py  model.py
